--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       </div>
       <div id= "Media">
         <h2>Media</h2>
-        <img src="https://i2-prod.mirror.co.uk/incoming/article801276.ece/ALTERNATES/s615b/Brown%20bear%20(female)%20and%20its%20children%20play%20with%20a%20ball%20in%20Kamchatka%20Peninsula,%20Russia" alt="bear waving hello" style= "width: 100%">
+        <img src="https://www.thoughtco.com/thmb/MN8WozNc4LUBluKrqeP3ZHbCsms=/768x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/close-up-view-of-a-mother-brown-bear-standing-over-her-cub-as-they-appear-to-be-looking-out-for-any-danger--kuril-lake--kamchatka--russia--827261734-5b97dfaa46e0fb0050b348af.jpg" alt="bear waving hello" style= "width: 100%">
         <video src="https://content.codecademy.com/courses/freelance-1/unit-1/lesson-2/htmlcss1-vid_brown-bear.mp4" width= "320" height="240" height="240" controls>
           Video Not Supported
         </video>
